--- a/templates/login.html
+++ b/templates/login.html
@@ -1,32 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" type="image/svg+xml" href="/static/favicon.ico" />
-    <link href="/static/tailwind.css" rel="stylesheet" />
-    <title>Readerporium</title>
-  </head>
-  <body>
-    {% for message in get_flashed_messages() %}
-    <div class="alert" role="alert">
-      {{ message }}
-    </div>
-    {% endfor %}
-    <div class="flex h-screen">
-      <div class="m-auto text-center border border-gray-300 rounded p-5">
-        <span class="text-2xl block mb-3">Welcome to Readerporium!</span>
-        <form method="POST">
-          <label for="username">Username</label>
-          <input type="text" class="form-field" name="username" />
-          <label for="password" >Password</label>
-          <input type="password" class="form-field" name="password" />
-          <div class="flex justify-center mt-6">
-            <button type="submit" class="w-full btn">Login</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </body>
-</html>
+{% extends 'base.html' %}{% block title %}Login{% endblock %}{% block content %}
+<form method="POST">
+	<div class="row">
+		<div class="offset-by-four four columns">
+			<label for="username">Username</label>
+		  <input type="text" class="u-full-width" name="username" />
+		</div>
+	</div>
+	<div class="row">
+		<div class="offset-by-four four columns">
+		  <label for="password">Password</label>
+		  <input type="password" class="u-full-width" name="password" />
+	  </div>
+  </div>
+  <div class="row">
+  	<div class="offset-by-five two columns">
+  		<input class="button" type="submit" value="Login">
+  	</div>
+  </div>
+</form>
+{% endblock %}
