--- a/templates/db-pages/publisher.html
+++ b/templates/db-pages/publisher.html
@@ -1,12 +1,11 @@
-{% extends 'base.html' %} {% block title %}{{ author.name }}{% endblock %} {%
-block content %}
+{% extends 'base.html' %} {% block title %}{{ publisher.name }} (L{{ publisher.level }}){% endblock %} {% block content %}
 {% if current_user.id == 1 %}
 <div class="flex justify-center gap-2 mb-6">
-  <a href="{{ url_for('update_author', id=author.id) }}">
+  <a href="{{ url_for('update_publisher', id=publisher.id) }}">
     <i class="fa-solid fa-pencil fa-xl"></i>
   </a>
-  <a href="{{ url_for('delete_author', id=author.id) }}">
-		<i class="fa-solid fa-trash fa-lg"></i>
+  <a href="{{ url_for('delete_publisher', id=publisher.id) }}">
+    <i class="fa-solid fa-trash fa-lg"></i>
   </a>
 </div>
 {% endif %}
@@ -16,12 +15,12 @@ block content %}
       <div class="overflow-x-auto shadow sm:rounded-lg">
         <table>
           <tbody>
-            {% for book in books | sort(attribute="title") %}{% if book.author.id == author.id %}
+            {% for book in books | sort(attribute="title") %}{% if book.publisher.id == publisher.id and book.level <= current_user.level %}
             <tr>
               <td>
 	              <a href="{{ url_for('books') }}/{{ book.id }}">
 					        <i class='fa-solid fa-book'></i>
-	              	{{ book.title }} ({{ book.series.name }} #{{ book.series_index }})
+	              	{{ book.title }} by {{ book.author.name }}
               	</a>
               </td>
             </tr>
