--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="one-half column">
 		<p style="margin-top:15%;">
-			Hmm, oops, looks like that link is broken.... Sorry, about that.<br />Here, let me guide you <a href="{{ url_for('index') }}">back home.</a>
+			Oops! Looks like that link is broken, sorry about that.<br />Here, let me guide you <a href="{{ url_for('index') }}">back home.</a>
 		</p>
 	</div>
 </div>
