--- a/templates/db-pages/tag.html
+++ b/templates/db-pages/tag.html
@@ -1,32 +1,28 @@
 {% extends 'base.html' %} {% block title %}{{ tag.name }}{% endblock %} {% block content %}
-{% if current_user.id == 1 %}
-<div class="flex justify-center gap-2 mb-6">
-  <a href="{{ url_for('update_tag', id=tag.id) }}">
-    <i class="fa-solid fa-pencil fa-xl"></i>
-  </a>
-  <a href="{{ url_for('delete_tag', id=tag.id) }}">
-    <i class="fa-solid fa-trash fa-lg"></i>
-  </a>
-</div>
-{% endif %}
-<div class="flex justify-center">
-  <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
-    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="overflow-x-auto shadow sm:rounded-lg">
-        <table>
-          <tbody>
-            {% for book in books | sort(attribute="title") %}{% if book.tag.id == tag.id and book.level <= current_user.level %}<tr>
-              <td>
-	              <a href="{{ url_for('books') }}/{{ book.id }}">
-					        <i class='fa-solid fa-book'></i>
-	              	{{ book.title }} by {{ book.author.name }}
-              	</a>
-              </td>
-            </tr>{% endif %}{% endfor %}
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
+<table class="u-full-width">
+	<thead>
+		<tr>
+			<th>Title</th>
+			<th>Series</th>
+		</tr>
+	</thead>
+  <tbody>
+    {% for book in tag.books %}{% if book.level <= current_user.level %}
+    <tr>
+      <td>
+        <a href="{{ url_for('books') }}/{{ book.id }}">
+        	<i class='fa-solid fa-book'></i>
+        	{{ book.title }} by {{ book.author.name }}
+      	</a>
+      </td>
+      <td>
+      	<a href="{{ url_for('series') }}/{{ book.series.id }}">
+      		<i class="fa-solid fa-list-ol"></i>
+      		{{ book.series.name }} #{{ book.series_index }}
+      	</a>
+      </td>
+    </tr>
+    {% endif %}{% endfor %}
+  </tbody>
+</table>
 {% endblock %}
