--- a/templates/forms/add-user.html
+++ b/templates/forms/add-user.html
@@ -1,37 +1,33 @@
 {% extends 'base.html' %}{% block title %}Add User{% endblock %}{% block content %}
-<form METHOD="POST">
+<form METHOD="POST" action="{{ url_for('add_user') }}">
+	{{ form.hidden_tag() }}
   <div class="row">
     <div class="four columns">
-      <label for="name">Name</label>
-      <input type="text" class="u-full-width" name="name" />
+      {{ form.name.label }}
+      {{ form.name(class="u-full-width") }}
     </div>
     <div class="four columns">
-      <label for="username">Username</label>
-      <input type="text" class="u-full-width" name="username" />
+      {{ form.username.label }}
+      {{ form.username(class="u-full-width") }}
     </div>
     <div class="four columns">
-      <label for="level">Level</label>
-      <select name="level" class="u-full-width">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-      </select>
+      {{ form.level.label }}
+      {{ form.level(class="u-full-width") }}
     </div>
   </div>
   <div class="row">
   	<div class="six columns">
-      <label for="password">Password</label>
-      <input type="password" class="u-full-width" name="password1" />
+      {{ form.password1.label }}
+      {{ form.password1(class="u-full-width") }}
     </div>
     <div class="six columns">
-      <label for="password2">Confirm Password</label>
-      <input type="password" class="u-full-width" name="password2" />
+      {{ form.password2.label }}
+      {{ form.password2(class="u-full-width") }}
     </div>
   </div>
   <div class="row">
   	<div class="offset-by-five two columns">
-  		<input class="button" type="submit" value="Submit">
+      {{ form.submit }}
   	</div>
   </div>
 </form>
