--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,27 +7,27 @@
 	</div>
 	<div class="offset-by-one one column">
 		<a href="{{ url_for('add_book') }}" class="button">
-			<i class="fa-solid fa-plus"></i><i class="fa-solid fa-book"></i>
+			<i class="fa-solid fa-book"></i><i class="fa-solid fa-plus"></i>
 	  </a>
 	</div>
 	<div class="offset-by-one one column">
 		<a href="{{ url_for('add_author') }}" class="button">
-			<i class="fa-solid fa-plus"></i><i class="fa-solid fa-user"></i>
+			<i class="fa-solid fa-user"></i><i class="fa-solid fa-plus"></i>
 	  </a>
 	</div>
 	<div class="offset-by-one one column">
 		<a href="{{ url_for('add_series') }}" class="button">
-			<i class="fa-solid fa-plus"></i><i class="fa-solid fa-list-ol"></i>
+			<i class="fa-solid fa-list-ol"></i><i class="fa-solid fa-plus"></i>
 	  </a>
 	</div>
 	<div class="offset-by-one one column">
 		<a href="{{ url_for('add_tag') }}" class="button">
-			<i class="fa-solid fa-plus"></i><i class="fa-solid fa-tag"></i>
+			<i class="fa-solid fa-tag"></i><i class="fa-solid fa-plus"></i>
 	  </a>
 	</div>
 	<div class="offset-by-one one column">
 		<a href="{{ url_for('add_publisher') }}" class="button">
-			<i class="fa-solid fa-plus"></i><i class="fa-solid fa-building"></i>
+			<i class="fa-solid fa-building"></i><i class="fa-solid fa-plus"></i>
 	  </a>
 	</div>
 </div>
