--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
 	      	<li class="navbar-item">
 	      		<a href="{{ url_for('levels') }}" class="navbar-link">
 	          	<i class="fa-solid fa-star"></i>
-	          	Levels
+	          	Levels & Wordcount
 	        	</a>
 	      	</li>
 	      	<li class="navbar-item">
