--- a/templates/book.html
+++ b/templates/book.html
@@ -55,7 +55,7 @@
         </tr>
         <tr>
           <td>
-          	<i class="fa-solid fa-hashtag"></i>
+          	<i class="fa-solid fa-fingerprint"></i>
           	<strong>{{ book.isbn }}</strong>
           </td>
         </tr>
