--- a/templates/forms/update-astp.html
+++ b/templates/forms/update-astp.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}{{ title }}{% endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %}Update {{ astp.name }}{% endblock %} {% block content %}
 <form METHOD="POST">
 	{{ form.hidden_tag() }}
   <div class="row">
