--- a/templates/home.html
+++ b/templates/home.html
@@ -1,29 +1,30 @@
 {% extends 'base.html' %}{% block title %}👋 Welcome {{ current_user.name }}! 🥳{% endblock %} {% block content %}
 <h3>Recently Added</h3>
-
 <table class="u-full-width">
   <thead>
     <tr>
       <th>ID</th>
       <th>Title</th>
-      <th>Series</th>
+      <th>Tags</th>
     </tr>
   </thead>
   <tbody>
     {% for book in books %}
     <tr>
-      <td>{{ book.id }}</td>
+      <td style='text-align: center;'>{{ book.id }}</td>
       <td>
       	<a href="{{ url_for('books') }}/{{ book.id }}">
       		<i class='fa-solid fa-book'></i>
-		    	{{ book.title }} by {{ book.author.name }}
+		    	{{ book.title }} {% if book.series %}({{ book.series.name }} #{{ book.series_index }}){% endif %} by {{ book.author.name }}
 		  	</a>
       </td>
       <td>
-      	<a href="{{ url_for('series') }}/{{ book.series.id }}">
-      		<i class='fa-solid fa-list-ol'></i>
-		    	{{ book.series.name }} #{{ book.series_index }}
+      	{% for tag in book.tags %}
+		  	<a href="{{ url_for('tag', id=tag.id) }}">
+		  		<i class="fa-solid fa-tag"></i>
+		  		{{ tag.name }}
 		  	</a>
+		  	{% endfor %}
       </td>
     </tr>
     {% endfor %}
