--- a/templates/levels.html
+++ b/templates/levels.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Reading Levels{% endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %}Reading Levels & Wordcounts{% endblock %} {% block content %}
 <div class="row">
 	<div class="offset-by-one-third one-third column">
 		<table class="u-full-width">
@@ -12,7 +12,7 @@
 	        <td>
 	          <a href="{{ url_for('level1') }}">
 			        <i class='fa-solid fa-star'></i>
-	          	Child
+	          	1
 	        	</a>
 	        </td>
 	      </tr>
@@ -22,7 +22,7 @@
 	          <a href="{{ url_for('level2') }}">
 			        <i class='fa-solid fa-star'></i>
 			        <i class='fa-solid fa-star'></i>
-	          	Teen
+	          	2
 	        	</a>
 	        </td>
 	      </tr>
@@ -33,7 +33,7 @@
 			        <i class='fa-solid fa-star'></i>
 			        <i class='fa-solid fa-star'></i>
 			        <i class='fa-solid fa-star'></i>
-	          	Adult
+	          	3
 	        	</a>
 	        </td>
 	      </tr>
@@ -45,11 +45,51 @@
 			        <i class='fa-solid fa-star'></i>
 			        <i class='fa-solid fa-star'></i>
 			        <i class='fa-solid fa-star'></i>
-	          	Mature
+	          	4
 	        	</a>
 	        </td>
 	      </tr>
 	      {% endif %}
+	      <tr>
+	        <td>
+	          <a href="{{ url_for('flash_fiction') }}">
+			        <i class='fa-solid fa-hashtag'></i>
+	          	Flash Fiction (< 3.5k words)
+	        	</a>
+	        </td>
+	      </tr>
+	      <tr>
+	        <td>
+	          <a href="{{ url_for('short_stories') }}">
+			        <i class='fa-solid fa-hashtag'></i>
+	          	Short Stories (3.5k - 7.5k words)
+	        	</a>
+	        </td>
+	      </tr>
+	      <tr>
+	        <td>
+	          <a href="{{ url_for('novellettes') }}">
+			        <i class='fa-solid fa-hashtag'></i>
+	          	Novellettes (7.5k - 17k words)
+	        	</a>
+	        </td>
+	      </tr>
+	      <tr>
+	        <td>
+	          <a href="{{ url_for('novellas') }}">
+			        <i class='fa-solid fa-hashtag'></i>
+	          	Novellas (17k - 40k words)
+	        	</a>
+	        </td>
+	      </tr>
+	      <tr>
+	        <td>
+	          <a href="{{ url_for('novels') }}">
+			        <i class='fa-solid fa-hashtag'></i>
+	          	Novels (> 40k words)
+	        	</a>
+	        </td>
+	      </tr>
 	    </tbody>
 		</table>
 	</div>
