--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,31 +1,24 @@
-{% extends 'base.html' %} {% block title %}{{ author.name }} (L{{ author.level }}){% endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %}{{ tag.name }}{% endblock %} {% block content %}
 <table class="u-full-width">
 	<thead>
 		<tr>
 			<th>Title</th>
 			<th>Series</th>
-			<th>Tag</th>
 		</tr>
 	</thead>
   <tbody>
-    {% for book in books %}{% if book.author.id == author.id %}
+    {% for book in tag.books | sort(attribute='title') %}{% if book.level <= current_user.level %}
     <tr>
       <td>
         <a href="{{ url_for('books') }}/{{ book.id }}">
         	<i class='fa-solid fa-book'></i>
-        	{{ book.title }}
+        	{{ book.title }} by {{ book.author.name }}
       	</a>
       </td>
       <td>
       	<a href="{{ url_for('series') }}/{{ book.series.id }}">
-      		<i class='fa-solid fa-list-ol'></i>
+      		<i class="fa-solid fa-list-ol"></i>
       		{{ book.series.name }} #{{ book.series_index }}
-      	</a>
-      </td>
-      <td>
-      	<a href="{{ url_for('tags') }}/{{ book.tag.id }}">
-      		<i class="fa-solid fa-tag"></i>
-      		{{ book.tag.name }}
       	</a>
       </td>
     </tr>
