Add book and astp count

--- a/templates/astp.html
+++ b/templates/astp.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}{{ title }}{% endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %}{{ title }} ({{ count }}){% endblock %} {% block content %}
 <div class="row">
 	<div class="offset-by-one-third one-third column">
 		<table class="u-full-width">
@@ -11,9 +11,9 @@
 		    {% for i in astp.items %}
 		    <tr>
 		      <td>
-		        <a href="{% if title == 'Authors' %}{{ url_for('author', id=i.id) }}{% elif title == 'Series' %}{{ url_for('serie', id=i.id) }}{% else %}{{ url_for('publisher', id=i.id) }}{% endif %}">
+		        <a href="{% if title == 'Authors' %}{{ url_for('author', id=i.id) }}{% elif title == 'Series' %}{{ url_for('serie', id=i.id) }}{% elif title == 'Tags' %}{{ url_for('tag', id=i.id) }}{% else %}{{ url_for('publisher', id=i.id) }}{% endif %}">
 		        	<i class='fa-solid fa-user'></i>
-		        	{{ i.name }}
+		        	{{ i.name }} ({{ i.books|length }} book{% if i.books| length != 1 %}s{% endif %})
 		      	</a>
 		      </td>
 		    </tr>
@@ -21,20 +21,32 @@
 		  </tbody>
 		</table>
 		<!-- Pagination Links-->
-		<div class="u-pull-right">
-			{% if astp.has_prev %}
-		  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.prev_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.prev_num) }}{% else %}{{ url_for('publishers', page=astp.prev_num) }}{% endif %}" class="button">
-				<i class="fa-solid fa-angles-left"></i>
-		  </a>
-		  {% endif %}{% if astp.has_next %}
-		  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.next_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.next_num) }}{% else %}{{ url_for('publishers', page=astp.next_num) }}{% endif %}" class="button">
-		  	<i class="fa-solid fa-angles-right"></i>
-		  </a>
-		  {% endif %}
-		</div>
-		<p>
-			Page {{ astp.page }} of {{ astp.pages }}
-		</p>
+		<table class="u-full-width list">
+			<thead>
+				<tr>
+					<th></th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>
+						Page {{ astp.page }} of {{ astp.pages }}
+					</td>
+					<td>
+						{% if astp.has_prev %}
+					  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.prev_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.prev_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.prev_num) }}{% else %}{{ url_for('publishers', page=astp.prev_num) }}{% endif %}" class="button">
+							<i class="fa-solid fa-angles-left"></i>
+					  </a>
+					  {% endif %}{% if astp.has_next %}
+					  <a href="{% if title == 'Authors' %}{{ url_for('authors', page=astp.next_num) }}{% elif title == 'Series' %}{{ url_for('series', page=astp.next_num) }}{% elif title == 'Tags' %}{{ url_for('tags', page=astp.next_num) }}{% else %}{{ url_for('publishers', page=astp.next_num) }}{% endif %}" class="button">
+					  	<i class="fa-solid fa-angles-right"></i>
+					  </a>
+					  {% endif %}
+					</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 {% endblock %}
