--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -27,13 +27,15 @@ h1, h2, h3 { text-align: center; margin-bottom: 4rem; }
   
 .content { clear: both; }
 
-thead > tr > th { text-align: center; text-transform: uppercase;}
-.users > tbody > tr > td { text-align: center; }
-tbody > tr > td > a {
+tr > th { text-align: center; text-transform: uppercase;}
+tr > td > a {
   font-weight: 600;
   text-decoration: none;
   color: #222; }
-
+.users tr > td { text-align: center; }
+.list td:last-child {
+  text-align: right; }
+  
 .alert {
   width: 100%;
   height: 38px;
@@ -51,7 +53,7 @@ tbody > tr > td > a {
   box-sizing: border-box;
 }
 
-i { padding-left: 2px; padding-right: 2px; }
+i { padding: 2px; }
 .button i { font-size: 1.25em; }
 
 form > textarea { height: 196px; }
