--- a/templates/tag.html
+++ b/templates/tag.html
@@ -3,7 +3,7 @@
 	<thead>
 		<tr>
 			<th>Title</th>
-			<th>Series</th>
+			<th>Tags</th>
 		</tr>
 	</thead>
   <tbody>
@@ -12,14 +12,16 @@
       <td>
         <a href="{{ url_for('books') }}/{{ book.id }}">
         	<i class='fa-solid fa-book'></i>
-        	{{ book.title }} by {{ book.author.name }}
+        	{{ book.title }} ({{ book.series.name }} #{{ book.series_index }}) by {{ book.author.name }}
       	</a>
       </td>
       <td>
-      	<a href="{{ url_for('series') }}/{{ book.series.id }}">
-      		<i class="fa-solid fa-list-ol"></i>
-      		{{ book.series.name }} #{{ book.series_index }}
-      	</a>
+      	{% for tag in book.tags %}
+		  	<a href="{{ url_for('tag', id=tag.id) }}">
+		  		<i class="fa-solid fa-tag"></i>
+		  		{{ tag.name }}
+		  	</a>
+		  	{% endfor %}
       </td>
     </tr>
     {% endif %}{% endfor %}
