Prepopulate description on update book page

--- a/templates/forms/update-book.html
+++ b/templates/forms/update-book.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   {{ form.description.label }}
-  {{ form.description(class="u-full-width", value=book.description) }}
+  {{ form.description(class="u-full-width") }}
   <div class="row">
   	<div class="offset-by-five two columns">
   		{{ form.submit }}
