--- a/templates/astp.html
+++ b/templates/astp.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block title %}{{ title }} ({{ count }}){% endblock %} {% block content %}
 <div class="row">
-	<div class="offset-by-one-third one-third column">
+	<div class="offset-by-three one-half column">
 		<table class="u-full-width">
 			<thead>
 				<tr>
