Fix update pages, add admin buttons

--- a/templates/forms/add-book.html
+++ b/templates/forms/add-book.html
@@ -45,10 +45,8 @@
   </div>
   {{ form.description.label }}
   {{ form.description(class="u-full-width") }}
-  <div class="row">
-  	<div class="offset-by-five two columns">
-  		{{ form.submit }}
-  	</div>
+  <div style="text-align:center;">
+		{{ form.submit }}
   </div>
 </form>
 {% endblock %}
