--- a/templates/forms/add-user.html
+++ b/templates/forms/add-user.html
@@ -25,10 +25,8 @@
       {{ form.password2(class="u-full-width") }}
     </div>
   </div>
-  <div class="row">
-  	<div class="offset-by-five two columns">
-      {{ form.submit }}
-  	</div>
+  <div style="text-align:center;">
+    {{ form.submit }}
   </div>
 </form>
 {% endblock %}
