--- a/templates/book.html
+++ b/templates/book.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %} {% block title %}{{ book.title }} by {{ book.author.name }}{% endblock %} {% block content %}
+{% if current_user.id == 1 %}
+<div style="margin-bottom: 4rem; text-align: center;">
+	<a href="{{ url_for('update_book', id=book.id) }}" class="button">
+		<i class="fa-solid fa-pencil"></i>
+	</a>
+	<a href="{{ url_for('delete_book', id=book.id) }}" class="button">
+		<i class="fa-solid fa-trash"></i>
+	</a>
+</div>
+{% endif %}
 <div class="row">
 	<div class="one-third column">
 		<img src="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}" alt="cover img" class="u-max-full-width" />
