--- a/templates/forms/add-astp.html
+++ b/templates/forms/add-astp.html
@@ -11,10 +11,8 @@
       {{ form.level(class="u-full-width") }}
     </div>
   </div>
-  <div class="row">
-  	<div class="offset-by-five two columns">
-  		{{ form.submit }}
-  	</div>
+  <div style="text-align:center;">
+		{{ form.submit }}
   </div>
 </form>
 {% endblock %}
