--- a/templates/forms/update-user.html
+++ b/templates/forms/update-user.html
@@ -15,10 +15,8 @@
       {{ form.level(class="u-full-width", value=user.level) }}
     </div>
   </div>
-  <div class="row">
-  	<div class="offset-by-five two columns">
-      {{ form.submit }}
-  	</div>
+  <div style="text-align:center;">
+    {{ form.submit }}
   </div>
 </form>
 {% endblock %}
