--- a/templates/list.html
+++ b/templates/list.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %} {% block title %}{% if astp %}{{ astp.name }}{% else %}{{ title }}{% endif %}{% if count %} ({{ count }}){% endif %}{% endblock %} {% block content %}
+{% if current_user.id == 1 %}{% if author or series or tag or publisher %}
+<div style="margin-bottom: 4rem; text-align: center;">
+	<a href="{% if author %}{{ url_for('update_author', id=astp.id) }}{% elif series %}{{ url_for('update_series', id=astp.id) }}{% elif tag %}{{ url_for('update_tag', id=astp.id) }}{% elif publisher %}{{ url_for('update_publisher', id=astp.id) }}{% endif %}" class="button">
+		<i class="fa-solid fa-pencil"></i>
+	</a>
+	<a href="{% if author %}{{ url_for('delete_author', id=astp.id) }}{% elif series %}{{ url_for('delete_series', id=astp.id) }}{% elif tag %}{{ url_for('delete_tag', id=astp.id) }}{% elif publisher %}{{ url_for('delete_publisher', id=astp.id) }}{% endif %}" class="button">
+		<i class="fa-solid fa-trash"></i>
+	</a>
+</div>
+{% endif %}{% endif %}
 <table class="u-full-width list">
 	<thead>
 		<tr>
@@ -13,7 +23,7 @@
 		<tr>
 			{% if series %}<td style='text-align: center;'>{{ book.series_index }}</td>{% endif %}
 		  <td>
-		    <a href="{{ url_for('books', id=book.id) }}">
+		    <a href="{{ url_for('book', id=book.id) }}">
 		    	<i class='fa-solid fa-book'></i>
 		    	{{ book.title }} {% if not series %}({{ book.series.name }} #{{ book.series_index }}){% endif %} by {{ book.author.name }}
 		  	</a>
