--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,4 @@
-.container { background: #fff;}
+body { background-color: #fffdd0;}
 .header { margin: 2% 0; }
 h1, h2, h3 { text-align: center; margin-bottom: 4rem; }
 
@@ -6,11 +6,12 @@ h1, h2, h3 { text-align: center; margin-bottom: 4rem; }
 	display: block;
   width: 100%;
   height: 6.5rem;
-  background: #fff;
+  background: #fdfd96;
   z-index: 99;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  border: 1px solid;
+  border-radius: 4px;
   margin-bottom: 4rem;
+  padding-left: 2rem;
 }
 .navbar-list { list-style: none; margin-bottom: 0; }
 .navbar-item { position: relative; float: left; margin-bottom: 0; }
@@ -25,14 +26,30 @@ h1, h2, h3 { text-align: center; margin-bottom: 4rem; }
   color: #222;
 }
 .navbar-link.active { color: #33C3F0; }
+
+a {
+  color: #00008b; }
+a:hover {
+  color: #0000cd; }
   
 .content { clear: both; }
 
+img { border-radius: 4px; }
+
+table {
+	background-color: #fdfd96;
+	border: 1px solid #222; }
+th, td { border-color: #222; }
+th:first-child,
+td:first-child {
+  padding-left: 1rem; }
+th:last-child,
+td:last-child {
+  padding-right: 1rem; }
 tr > th { text-align: center; text-transform: uppercase;}
 tr > td > a {
   font-weight: 600;
-  text-decoration: none;
-  color: #222; }
+  text-decoration: none; }
 .users tr > td { text-align: center; }
 .list td:last-child {
   text-align: right; }
@@ -42,7 +59,7 @@ tr > td > a {
   height: 38px;
   padding: 0 30px;
   color: #FFF;
-  background-color: #33C3F0;
+  background-color: #fdfd96;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -50,7 +67,7 @@ tr > td > a {
   letter-spacing: .1rem;
   white-space: nowrap;
   border-radius: 4px;
-  border: 1px solid #33C3F0;
+  border: 1px solid;
   box-sizing: border-box;
 }
 
@@ -58,3 +75,25 @@ i { padding: 2px; }
 .button i { font-size: 1.25em; }
 
 form > textarea { height: 236px; }
+
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  color: #222;
+  background-color: #fdfd96;
+  border-color: #222;}
+  
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea,
+select {
+  background-color: #fdfd96;
+  border-color: #222; }
+
