--- a/templates/forms/add-book.html
+++ b/templates/forms/add-book.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}{% block title %}Add Books{% endblock %} {% block content %}
+{% extends 'base.html' %}{% block title %}Add Book{% endblock %} {% block content %}
 <form METHOD="POST" action="{{ url_for('add_book') }}">
 	{{ form.hidden_tag() }}
   <div class="row">
